Knowrob/indigo/indigo-knowrob-dev/catkin_ws/logs/hm_marker_detection/build.make.016.log.stderr
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp: In member function 'void MarkerLocalizer::imageReceivedCallback(const ImageConstPtr&)':
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:99:3: error: 'Matrix4d' was not declared in this scope
   Matrix4d p = quaternionToMatrix(q);
   ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:99:12: error: expected ';' before 'p'
   Matrix4d p = quaternionToMatrix(q);
            ^
make[2]: *** [CMakeFiles/marker_localizer.dir/src/MarkerLocalizer.cpp.o] Error 1
make[1]: *** [CMakeFiles/marker_localizer.dir/all] Error 2
make: *** [all] Error 2
